--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </header>
     <!--data-toggle="modal" data-target="#reservemodal"-->
-  <img src="wall2.jpg" style="width: 1520px;">
+   <img src="wall2.jpg" width=100%; height=100%;>
     <footer class="footer" style="background-image: url(wall3.jpg);background-size: 1520px;background-repeat: no-repeat;">
         <div class="container">
             <div class="row">             
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-3 col-sm-4">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15138.960731624524!2d73.8675033!3d18.4501022!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb75eebf3233ba776!2sSwitchPay%20Solutions%20Pvt.Ltd!5e0!3m2!1sen!2sin!4v1609403443575!5m2!1sen!2sin" 
-  width="400" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  width="380" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                     
            </div>
