--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="bootstrap-social/bootstrap-social.css">
     
 </head>
-<title>Book Depot</title><link rel = "icon" href ="books.png" style="width:200px;" type = "image/x-icon"> 
+<title>Book Depot</title><link rel = "icon" href ="icon.png" style="width:300px;" type = "image/x-icon"> 
 <body>
 <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
 <div class="container">
@@ -57,7 +57,7 @@
     <header class="jumbotron" style="background-image: url(bok.jpg);background-size: 1520px;background-repeat: no-repeat;">
         <div class="container">
             <div class="row row-header">
-                <img src="./icon.PNG" style="width: 100px;" class="img-fluid">
+                <img src="icon1.png" style="width: 100px;" class="img-fluid">
                 <div class="col-12 col-sm-6">
                     <h1>Book Depot</h1>
                  
