--- a/rp.html
+++ b/rp.html
@@ -55,7 +55,8 @@ h3{
 <b>Policy brief & purpose</b>
 <br>
 
-
+As you place the order, we will make the arrangements for shipping the products to you. The schedules of shipping are previously. At the same time, we are liable for any delays in the procedure of shipment. The risk of loss and damage is passed to you as soon as the product is delivered to you. We cannot arrange for reverse shipment because of the unavailability of our logistic partners. In such a case, we might request you to send the products through any kinds of courier services.
+<br><br>
 Booksdekho understand that you may wish to return a book for any number of reasons. Returning a book is not a problem. We accept any return shipped to us within 15 days of the purchase date. 
 <br><br>
 Please send the return to:<br><br>
@@ -71,6 +72,10 @@ Once we receive your return, we will process refund up to 15 day when we receive
 We do ask that you please understand that shipping fees will not be reimbursed. Our return policy does allow for a refund for the item cost. Please note that if you are returning new books, they must be unused in order to receive a refund.
 <br><br>
 If the return has reached the 15-day policy, or we've made an error with the purchase that would warrant us covering return shipping costs, please contact us prior to returning the item by submitting a Request.
+<br><br>
+If you return any product, we will accept if it is damaged during shipping or it defective. We will also accept the return, if the product is wrongly delivered to you or the packing is incomplete. However, we should be informed about the discrepancies within 72 hours from the delivery date of the product. At the same time, the products should also be returned in the original condition.
+<br><br>
+If there is a change in quantity or addition of items or if specific changes have been accepted, we can modify the details of the orders. All the sales are final and the cancellations of the items can be made before the order is finally shipped. Without any liability, we might cancel the accepted order before the shipment, if the credit department does not gives the approval of your credit. We can do the same if there is a problem with the mode of payment that you have selected.
 </div></span></p><br>
 
 </div>
