--- a/tc.html
+++ b/tc.html
@@ -51,8 +51,10 @@ h3{
    <p>
    	<span>
 
-   	<div class="a">
-<b>Ways to register complaints:</b>
+   	<div class="a"><br>
+		The above mentioned terms and conditions will be in use in accordance with the Indian laws. If there are matters of disputed from it related to the terms and conditions of the website, the competent Courts at New Delhi, Delhi will have the complete jurisdiction for the matter and all the other courts will be excluded.
+		<br><br>
+		<b>Ways to register complaints:</b>
 <br><br>
 All customers have the right to share their feedback or complaint in case they find our services are not meeting their expectations or are dissatisfied with any interaction with any of our staff members. The Customers can send in their Queries, Requests or Complaints in the following ways:
 <br><br>
