--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <li> <a href="pp.html" style="color: beige;" >Privacy Policy</a>  </li> 
                             <li> <a href="rp.html" style="color: beige;" >Refund Policy</a>  </li> 
                             <li> <a href="tc.html" style="color: beige;" >Terms & Conditions</a>  </li> 
+                            <li> <a href="cr.html" style="color: beige;" >Copyright Policy</a>  </li> 
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
