--- a/pp.html
+++ b/pp.html
@@ -54,51 +54,55 @@ h3{
    	<div class="a">
 <b>Policy brief & purpose</b>
 <br>
-
-
-
-Booksdekho Company Data Protection Policy refers to our commitment to treat information of employees, customers, stakeholders and other interested parties with the utmost care and confidentiality.With this policy, we ensure that we gather, store and handle data fairly, transparently and with respect towards individual rights.
+Booksdekho.store website strictly focuses on the privacy of our customers’ and our loyalty towards our commitment. The policy discloses the practice by which we gather the necessary information through our website. 
 <br><br>
-<b>Scope</b><br>
-
-This policy refers to all parties (employees, job candidates, customers, suppliers etc.) who provide any amount of information to us.
+<b>The Information that is collected </b><br>
+When you sign up for a Booksdekho.store account and want to avail the products & services that is offered by our website, 
+we safely store all the information that is provided by you. We make use of an order form whereby we provide the opportunity to our customers to request for information, products & services. We also collect the contact information (email address & mobile number) of our visitors along with the financial information (credit card & debit card). We use contact information to send orders to the customers along with the information of our company. The information can also be used to communicate with the customers, as and when need arises. On the other hand, financial information gathered to invoice customer for different kinds of products and services. The mailing and promotional calls can be stopped by the user if required by following the steps given in Choice/Opt-out below. 
+<br>
+The information of your browser along with your IP address is stored in the form of “cookie”. This makes it easy for us to identify you 
+and the shopping cart with added products & services. Cookie is a tiny data file which is store in your hard drive. Cookie file neither read stored in your hard drive nor read the other cookie file. You can reject the storage of the cookie in your hard drive by simply switching off this option in your browser. For purchasing, it’s not necessary to switch on the cookie in the browser option. 
 </div>
 </span></p><br>
 
 <div class="b">
-   <b>Who is covered under the Data Protection Policy?</b>
+   <b>Uses of the collected information </b>
    <br>
-   
-   
-   Employees of our company and its subsidiaries must follow this policy. Contractors, consultants, partners and any other external entity are also covered. Generally, our policy refers to anyone we collaborate with or acts on our behalf and may need occasional access to data.
+   In order to improve the online customer experience, Booksdekho.store makes use of the information collected. Thus when you sign in, it authenticate you and send notification through email. Your request can be fulfilled for different product & services. We will use the information for customizing the advertisements and content according to the customer’s need. Information used for capturing data insights for internal and external clients. 
    <br><br>
-   <b>Policy elements</b><br>
-   As part of our operations, we need to obtain and process information. This information includes any offline or online data that makes a person identifiable such as names, addresses, usernames and passwords, digital footprints, photographs, social security numbers, financial data etc.
-
-   Our company collects this information in a transparent way and only with the full cooperation and knowledge of interested parties. Once this information is available to us, the following rules apply.
-   </span><br>
+   <b>Sharing of Information </b><br>
+   You can be assured that Booksdekho.store does not believe in sharing any personal information with any individual, company or organization. Information is only shared if we have consent from your side unless 
+<ul>
+   <li>We are working with some reliable partners that agree to accept our terms & conditions and also agree to sign a confidentiality agreement. </li>
+<li>We also respond to court orders or any other legal processes in order to exercise or establish the legal rights for defending any claims. </li>
+<li>We may also disclose the information of those customers who may come in terms of suspicion for any fraud or illegal transaction. Then their information will be used for legal processes or investigation by the court. </li>
+<li>This website may have pop-ups of other website and the information given to them is not our responsibility </li>
+</ul>  
+</span><br>
    
    </div>
    <br>
 	
    <div class="a">
-      <b>Our data will be:</b>
+      <b>Data integrity </b>
       <br>
-      Accurate and kept up-to-date Collected fairly and for lawful purposes only Processed by the company within its legal and moral boundaries Protected against any unauthorized or illegal access by internal or external parties.     
-  <br><br>
-      <b>Our data will not be:</b><br>
-      Communicated informally Stored for more than a specified amount of time Transferred to organizations, 
-      states or countries that do not have adequate data protection policies Distributed to any party other than the ones agreed upon by the data’s owner (exempting legitimate requests from law enforcement authorities).In addition to ways of handling the data the company has direct obligations towards people to whom the data belongs.     </div>
-    <br>  <b>Specifically we must:</b>
-      <br>
-      Let people know which of their data is collected Inform people about how we’ll process their data Inform people about who has access to their information Have provisions in cases of lost, corrupted or compromised data allow people to request that we modify, erase, reduce or correct data contained in our databases.<br><br>
-      <b>Actions</b><br>
-      To exercise data protection we’re committed to restrict and monitor access to sensitive data develop transparent data collection procedures train employees in online privacy and security measures build secure networks to protect online data from cyberattacks Establish clear procedures for reporting privacy breaches or data misuse Include contract clauses or communicate statements on how we handle data Establish data protection practices (document shredding, secure locks, data encryption, frequent backups, access authorization etc.) Our data protection provisions will appear on our website.
-      <b>Disciplinary Consequences</b>
-      <br>
-      All principles described in this policy must be strictly followed. A breach of data protection guidelines will invoke disciplinary and possibly legal action.
-   </div>
+      Booksdekho.store collected the customer’s personal information and processes it in accordance with the privacy policy. We ensure that the data we collected, stored for different process practices needed to provide the meaningful online service to the customer. Thus, we request our customer’s to provide the data as accurate as possible. 
+      <br><br>
+      <b>Security & Confidentiality </b><br>
+      contractors and agents for updates, delivery and for improvement of the product and services. They have to abide to the confidentiality agreement failing which they will be terminated. 
 
+      We make use of the best security measures for the protection against the misuse, loss of information that is under our control. We go through the SSL secure commerce server which uses the military grade encryption to protect all the information with specific codes. Each customer is important to us and we consider their approval with due respect.   <br>  
+      <br>
+        <b>Choice/Opt-out </b><br>
+        Customers can unsubscribe the email at any point of time according to their desire by following the suggestion given at the bottom of the Booksdekho.store email/newsletter. 
+        <br><br> <b>Contacting Booksdekho.store </b>
+      <br>
+      If there is any changes that you would like to make in your current information then do remove your previous contact details so that you don’t get any updates in your old contacts. You can also be with us through the following contacts:  </div>
+<ul><br>
+   <li>Email: contact@switchtopay.com</li>
+   <li>Address: SwitchPay Solutions Pvt.Ltd, D-4 802, Lake Town CHS,Bibwewadi-Katraj Road,Katraj Pune-411046</li>
+      <li>Call:+91 8484030904 </li>
+</ul>
 </div>
    </body>
 </html>
