--- a/cr.html
+++ b/cr.html
@@ -54,7 +54,7 @@ h3{
    	<div class="a">
 <b>Policy brief & purpose</b><br>
 <br>
-Copyright in this Website belongs to SR Ecommerce Factory Private Limited ("Booksdekho"). Booksdekho also uses contents of their vendors and
+Copyright in this Website belongs to Booksdekho. Booksdekho also uses contents of their vendors and
  third parties as well who might not be the original owners of copyright therein. The users should assume that standard copyright protection applies to all materials and contents displayed on the Website. Any redistribution, modification or reproduction of part or all of the contents featured in the Website in any form is prohibited. You may display, print, or download the contents to a local hard disk extracts for your personal, non-commercial use, but only if you acknowledge the Website as the source of the material. You are not permitted, except with the express written consent of Booksdekho, to distribute or commercially exploit the contents on this Website. You are also prohibited from transmitting the contents or storing it in any other Website or in other form of electronic retrieval system. 
 <br><br>
 <b>Intellectual Property Rights Policy  </b><br><br>
@@ -92,7 +92,7 @@ the copyright owner's behalf. </li></ul>
   <ul>   <li>Email: contact@switchtopay.com</li>
    <li>Address: SwitchPay Solutions Pvt.Ltd, D-4 802, Lake Town CHS,Bibwewadi-Katraj Road,Katraj Pune-411046</li>
       <li>Call:+91 8484030904 </li>
-</ul></div>
+</ul></div>  <br>Copyright reserved to SwitchPay Solutions Pvt.Ltd.
 
    </body>
 </html>
