--- a/tc.html
+++ b/tc.html
@@ -82,6 +82,7 @@ Make sure that you thorough review the privacy policy that governs the visit to 
 	  The payments will have to reach us before shipping unless the order is made on the condition of cash on delivery. We can accept payment through cash, credit cheque, net banking, draft, debit card and even mobile payment.    <br>
 	  <br> <b>About Shipping and Handling  </b><br>
 		As you place the order, we will make the arrangements for shipping the products to you. The schedules of shipping are previously. At the same time, we are liable for any delays in the procedure of shipment. The risk of loss and damage is passed to you as soon as the product is delivered to you. We cannot arrange for reverse shipment because of the unavailability of our logistic partners. In such a case, we might request you to send the products through any kinds of courier services.   
+		Books will be shipped within 24 hours on confirmation of order. Shipping time is 3 days and delivery time within 7 days. 
       <br>
     
 </div>
@@ -141,6 +142,6 @@ Protected Graphics: The graphics, page headers, logos, icons, scripts are trad
 			The complete site is provided by Booksdekho.store on the basis of as is and as available. The company does not represent or warrantee any kind of operations. It also does not express or implies the information on the site or the operation along with the additional materials, contents or products that are part of this site. It is you as a customer who agrees that the use of this site is solely at your own risk. 
 
 As applicable by law, Booksdekho.store disclaims all the warrantees to the full extent. It also disclaims the expression or implication that are not limited to but implied with the warrantees of merchantability as well as fitness. These conditions are stated for a special purpose. The site also does not warrantee that the total site, the servers, the emails sent are completely free of any harmful components or viruses. However, the site will not take the liability of any damages that arises from the usage of the site that also includes any kind if incidental, direct, indirect or kinds of consequential damages, as a whole. 
-		</div>
+		</div><br>These terms are bound to SwitchPay Solutions Pvt.Ltd. Copyright reserved to SwitchPay Solutions Pvt.Ltd.
    </body>
 </html>
